# monaibuilder

./: .gitignore  README.md  pyproject.toml  runtests.sh  setup.cfg
monaibuilder/: __init__.py  builder.py  extended_spytula_builder.py
monaibuilder/utils/: __init__.py  utils.py
tests/: __init__.py
tests/monaibuilder/: builder-test.py
