[tool.poetry]
name = "monaibuilder"
version = "0.1.1"
description = "Automative package for monai bundle creation"
authors = ["Chernenkiy Ivan"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "monaibuilder"}]
keywords = ["JSON", "YAML", "DSL", "MONAI"]
classifiers = [
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: File Formats :: JSON"
]
[tool.poetry.dependencies]
python = ">=3.8.1,<4.0.0"
spytula = "^0.0.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
isort = "^5.12.0"
black = "^23.7.0"
pylint = "^2.17.4"
pytype = "^2023.7.21"
mypy = "^1.4.1"
monai = "^1.2.0"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
nibabel = "5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
